feat: 新增截圖功能並更新相關代碼，增強擴充功能的使用體驗

--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,8 @@
   "description": "使用 Gemini API 詢問關於目前頁面的問題",
   "permissions": [
     "storage",
-    "activeTab"
+    "activeTab",
+    "tabs"
   ],
   "action": {
     "default_popup": "popup.html",
