feat: 更新建構流程，新增 settings.html 和 settings.js 檔案

--- a/.github/workflows/quality-check.yml
+++ b/.github/workflows/quality-check.yml
@@ -167,6 +167,8 @@ jobs:
           content.js \
           popup.html \
           popup.js \
+          settings.html \
+          settings.js \
           style.css \
           icons/ \
           lib/ \
