--- a/.github/workflows/manual-build.yml
+++ b/.github/workflows/manual-build.yml
@@ -80,6 +80,8 @@ jobs:
           content.js \
           popup.html \
           popup.js \
+          settings.html \
+          settings.js \
           style.css \
           icons/ \
           lib/ \
