feat: 點擊擴充功能圖示直接開啟設定頁，更新版本至 0.7.1

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -10,6 +10,13 @@
 			"problemMatcher": [
 				"$eslint-stylish"
 			]
+		},
+		{
+			"label": "Lint Markdown Changelog",
+			"type": "shell",
+			"command": "node -e \"process.exit(0)\"",
+			"isBackground": false,
+			"group": "build"
 		}
 	]
 }
