--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "ask-page-extension",
-  "version": "0.7.0",
+  "version": "0.7.1",
   "description": "使用 Gemini 或 OpenAI API 詢問關於目前頁面的問題",
   "main": "background.js",
   "scripts": {
     "lint": "eslint *.js --ignore-pattern lib/ --ignore-pattern AskPage.user.js",
     "lint:fix": "eslint *.js --fix --ignore-pattern lib/ --ignore-pattern AskPage.user.js",
     "validate": "echo '⚠️  Web-ext 工具對 Manifest V3 支援有限，請手動檢查' && web-ext lint --source-dir . --ignore-files lib/ node_modules/ .git/ AskPage.user.js test-release.sh package.json package-lock.json .eslintrc.js .gitignore *.md || true",
-    "build": "npm run lint && npm run validate && npm run package",
+    "build": "npm run lint && npm run validate && npm run package -- --overwrite-dest",
     "package": "web-ext build --source-dir . --artifacts-dir dist/ --ignore-files node_modules/ .git/ .github/ .vscode/ *.md package.json package-lock.json .eslintrc.js .gitignore",
     "test": "echo '暫無測試項目' && exit 0",
     "dev": "web-ext run --source-dir . --ignore-files node_modules/ .git/",
