--- a/package.json
+++ b/package.json
@@ -4,13 +4,11 @@
   "description": "使用 Gemini 或 OpenAI API 詢問關於目前頁面的問題",
   "main": "background.js",
   "scripts": {
-    "lint": "eslint *.js --ignore-pattern lib/ --ignore-pattern AskPage.user.js",
-    "lint:fix": "eslint *.js --fix --ignore-pattern lib/ --ignore-pattern AskPage.user.js",
-    "validate": "echo '⚠️  Web-ext 工具對 Manifest V3 支援有限，請手動檢查' && web-ext lint --source-dir . --ignore-files lib/ node_modules/ .git/ AskPage.user.js test-release.sh package.json package-lock.json .eslintrc.js .gitignore *.md || true",
-    "build": "npm run lint && npm run validate && npm run package -- --overwrite-dest",
-    "package": "web-ext build --source-dir . --artifacts-dir dist/ --ignore-files node_modules/ .git/ .github/ .vscode/ *.md package.json package-lock.json .eslintrc.js .gitignore",
+    "lint": "eslint *.js --ignore-pattern lib/",
+    "lint:fix": "eslint *.js --fix --ignore-pattern lib/",
+    "build": "npm run lint",
+    "package": "zip -r dist/AskPageExtension_vX.X.X.zip manifest.json background.js content.js popup.html popup.js settings.html settings.js style.css icons lib CHANGELOG.md README.md",
     "test": "echo '暫無測試項目' && exit 0",
-    "dev": "web-ext run --source-dir . --ignore-files node_modules/ .git/",
     "clean": "rm -rf dist/ node_modules/ *.zip"
   },
   "keywords": [
@@ -26,8 +24,7 @@
   "author": "AskPage Team",
   "license": "MIT",
   "devDependencies": {
-    "eslint": "^8.57.0",
-    "web-ext": "^8.0.0"
+    "eslint": "^8.57.0"
   },
   "repository": {
     "type": "git",
