feat: 更新切換對話框的快捷鍵設定 (Ctrl+Alt+Shift+I)

--- a/manifest.json
+++ b/manifest.json
@@ -35,8 +35,8 @@
   "commands": {
     "toggle-dialog": {
       "suggested_key": {
-        "default": "Ctrl+I",
-        "mac": "MacCtrl+I"
+      "default": "Ctrl+Alt+Shift+I",
+      "mac": "MacCtrl+Alt+Shift+I"
       },
       "description": "Open AskPage dialog"
     },
